// Autogenerated by:
// ../../src/tools/ftrace_proto_gen/ftrace_proto_gen.cc
// Do not edit.

syntax = "proto2";
package perfetto.protos;

message DsiCmdFifoStatusFtraceEvent {
  optional uint32 header = 1;
  optional uint32 payload = 2;
}
message DsiRxFtraceEvent {
  optional uint32 cmd = 1;
  optional bytes rx_buf = 3;
}
message DsiTxFtraceEvent {
  optional uint32 last = 1;
  optional uint32 type = 3;
  optional bytes tx_buf = 4;
}
message PanelWriteGenericFtraceEvent {
  optional int32 pid = 1;
  optional string trace_name = 2;
  optional uint32 trace_begin = 3;
  optional string name = 4;
  optional uint32 type = 5;
  optional int32 value = 6;
}
message GramCollisionFtraceEvent {
  optional int32 panel_index = 1;
  optional uint32 collision_cnt = 2;
}
