/*
 * Copyright (C) 2025 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package perfetto.protos;

// Serialized representation of a single argument value from an arg set.
message ArgValue {
  enum Type {
    TYPE_NULL = 0;
    TYPE_INT = 1;
    TYPE_STRING = 2;
    TYPE_REAL = 3;
    TYPE_POINTER = 4;
    TYPE_BOOL = 5;
    TYPE_JSON = 6;
  }
  optional Type type = 1;

  oneof value {
    int64 int_value = 2;
    string string_value = 3;
    double real_value = 4;
  }
}